# RPThermostat

./: .gitignore  README.md  pyproject.toml
rpthermostat/: app.py  config.py  data.json  datetime.py  main.py  pyproject.toml  server.py  servo.py  template.py  thermometer.py  thermostat.py  udatetime.py  wifi.py
rpthermostat/html/: index.html  main.css  style.css  update.js
rpthermostat/html/assets/: main.css  slider.js  style.css  temp_display.js  update.js
rpthermostat/html/assets/css/: main.css
rpthermostat/html/assets/js/: slider.js  temp_display.js  update.js
rpthermostat/http/: __init__.py  request.py  response.py  utils.py
rpthermostat/server/: __init__.py  enums.py  lib.py  server.py  utils.py
rpthermostat/server/http/: __init__.py  request.py  response.py  utils.py
