[tool.pyright]
reportAny = false
reportExplicitAny = false
reportDeprecated = false
reportImplicitOverride = false
reportUntypedNamedTuple = false
reportImplicitRelativeImport = false
reportMissingModuleSource = "none"
reportUnnecessaryTypeIgnoreComment = "error"

[project]
name = "rpthermostat"
version = "0.1.0"
description = ""
authors = [
    {name = "MatteoBouvier",email = "matteo.bouvier@hotmail.fr"}
]
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
    "micropython-rp2-pico-w-stubs (>=1.20.0.post5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
